--- a/internal/tsconfig.json
+++ b/internal/tsconfig.json
@@ -13,6 +13,7 @@
         { "path": "./tag" },
         { "path": "./threading" },
         { "path": "./ts-worker" },
+        { "path": "./deprecate" },
         // hygen: add new project references above this line
     ]
 }
