--- a/packages/cancelable/package.json
+++ b/packages/cancelable/package.json
@@ -19,6 +19,7 @@
     "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b",
     "dependencies": {
         "@esfx/disposable": "^1.0.0-pre.11",
+        "@esfx/internal-deprecate": "^1.0.0-pre.11",
         "@esfx/internal-guards": "^1.0.0-pre.11",
         "@esfx/internal-tag": "^1.0.0-pre.6",
         "tslib": "^1.9.3"
