--- a/packages/equatable/package.json
+++ b/packages/equatable/package.json
@@ -14,6 +14,7 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "dependencies": {
+        "@esfx/internal-deprecate": "^1.0.0-pre.11",
         "@esfx/internal-hashcode": "^1.0.0-pre.9",
         "tslib": "^1.9.3"
     },
