--- a/packages/async-lockable/tsconfig.json
+++ b/packages/async-lockable/tsconfig.json
@@ -8,6 +8,7 @@
     "references": [
         { "path": "../cancelable" },
         { "path": "../disposable" },
+        { "path": "../../internal/deprecate" },
         { "path": "../../internal/guards" },
         { "path": "../../internal/tag" },
     ]
