--- a/packages/cancelable/tsconfig.json
+++ b/packages/cancelable/tsconfig.json
@@ -6,6 +6,7 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
+        { "path": "../../internal/deprecate" },
         { "path": "../../internal/guards" },
         { "path": "../../internal/tag" },
         { "path": "../disposable" },
