--- a/packages/equatable/tsconfig.json
+++ b/packages/equatable/tsconfig.json
@@ -7,6 +7,7 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
+        { "path": "../../internal/deprecate" },
         { "path": "../../internal/hashcode" },
     ]
 }
