--- a/packages/threading-mutex/tsconfig.json
+++ b/packages/threading-mutex/tsconfig.json
@@ -8,6 +8,7 @@
     "references": [
         { "path": "../../internal/threading" },
         { "path": "../../internal/ts-worker" },
+        { "path": "../threading-lockable" },
         { "path": "../disposable" }
     ]
 }
