--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -4,12 +4,14 @@
     "include": [],
     "exclude": [],
     "references": [
+        { "path": "./async" },
         { "path": "./async-autoresetevent" },
         { "path": "./async-barrier" },
         { "path": "./async-canceltoken" },
         { "path": "./async-conditionvariable" },
         { "path": "./async-countdown" },
         { "path": "./async-deferred" },
+        { "path": "./async-delay" },
         { "path": "./async-lazy" },
         { "path": "./async-lockable" },
         { "path": "./async-manualresetevent" },
@@ -19,43 +21,44 @@
         { "path": "./async-semaphore" },
         { "path": "./async-stack" },
         { "path": "./async-waitqueue" },
-        { "path": "./async" },
-        { "path": "./cancelable-dom-shim" },
-        { "path": "./cancelable-dom" },
         { "path": "./cancelable" },
+        { "path": "./cancelable-dom" },
+        { "path": "./cancelable-dom-shim" },
+        { "path": "./collection-core" },
         { "path": "./collection-core-dom-shim" },
         { "path": "./collection-core-shim" },
-        { "path": "./collection-core" },
+        { "path": "./collections" },
         { "path": "./collections-hashmap" },
         { "path": "./collections-hashset" },
         { "path": "./collections-linkedlist" },
+        { "path": "./collections-multimap" },
         { "path": "./collections-sortedmap" },
         { "path": "./collections-sortedset" },
-        { "path": "./collections" },
-        { "path": "./decorators-stage1-core" },
         { "path": "./decorators" },
+        { "path": "./decorators-stage1-core" },
         { "path": "./disposable" },
-        { "path": "./equatable-shim" },
         { "path": "./equatable" },
+        { "path": "./equatable-shim" },
+        { "path": "./events" },
         { "path": "./indexed-object" },
+        { "path": "./iter" },
         { "path": "./lazy" },
-        { "path": "./metadata-shim" },
         { "path": "./metadata" },
+        { "path": "./metadata-shim" },
         { "path": "./ref" },
         { "path": "./reflect-metadata-compat" },
-        { "path": "./type-model" },
+        { "path": "./struct-type" },
+        { "path": "./threading" },
         { "path": "./threading-autoresetevent" },
-        { "path": "./threading-manualresetevent" },
-        { "path": "./threading-mutex" },
-        { "path": "./threading-sleep" },
         { "path": "./threading-conditionvariable" },
         { "path": "./threading-countdown" },
-        { "path": "./threading-semaphore" },
         { "path": "./threading-lockable" },
-        { "path": "./struct-type" },
+        { "path": "./threading-manualresetevent" },
+        { "path": "./threading-mutex" },
+        { "path": "./threading-semaphore" },
+        { "path": "./threading-sleep" },
         { "path": "./threading-spinwait" },
-        { "path": "./threading" },
-        { "path": "./collections-multimap" },
+        { "path": "./type-model" },
         // hygen: add new project references above this line
     ]
 }
