--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "del": "^3.0.0",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.0",
-    "jest": "^23.6.0",
+    "jest": "^24.9.0",
     "lerna": "^3.14.1",
     "prex": "^0.4.5",
-    "ts-jest": "^23.10.5",
-    "ts-node": "^8.2.0",
-    "typescript": "^3.5.2",
+    "prompts": "^2.3.0",
+    "ts-jest": "^24.2.0",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2",
     "yargs": "^13.2.2",
     "yargs-unparser": "^1.5.0"
-  }
+  },
+  "dependencies": {}
 }
