--- a/packages/collection-core/tsconfig.json
+++ b/packages/collection-core/tsconfig.json
@@ -6,6 +6,7 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
-        { "path": "../../internal/guards" }
+        { "path": "../../internal/guards" },
+        { "path": "../../internal/deprecate" }
     ]
 }
