--- a/packages/decorators/tsconfig.json
+++ b/packages/decorators/tsconfig.json
@@ -7,6 +7,7 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
+        { "path": "../../internal/guards" },
         { "path": "../decorators-stage1-core" },
     ]
 }
