--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "esnext",
+        "target": "es2019",
         "module": "commonjs",
         "lib": ["esnext"],
         "composite": true,
