--- a/packages/iter-hierarchy/package.json
+++ b/packages/iter-hierarchy/package.json
@@ -18,6 +18,7 @@
         "@esfx/equatable": "^1.0.0-pre.13",
         "@esfx/internal-assert": "^1.0.0-pre.15",
         "@esfx/internal-guards": "^1.0.0-pre.11",
+        "@esfx/interval": "^1.0.0-pre.11",
         "@esfx/iter-ordered": "^1.0.0-pre.15"
     },
     "publishConfig": {
