--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@microsoft/api-extractor": "7.7.12",
     "@microsoft/api-extractor-model": "7.7.10",
     "@microsoft/tsdoc": "0.12.19",
-    "@types/jest": "^23.3.11",
-    "@types/node": "^10.12.12",
+    "@types/jest": "^26.0.9",
+    "@types/node": "^14.0.27",
     "chalk": "^2.4.2",
     "del": "^3.0.0",
     "fancy-log": "^1.3.3",
@@ -32,9 +32,9 @@
     "lerna": "^3.14.1",
     "prex": "^0.4.5",
     "prompts": "^2.3.0",
-    "ts-jest": "^24.2.0",
-    "ts-node": "^8.5.2",
-    "typescript": "^3.7.2",
+    "ts-jest": "^26.2.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^4.0.1-rc",
     "yargs": "^13.2.2",
     "yargs-unparser": "^1.5.0"
   },
