--- a/packages/async-iter-hierarchy/package.json
+++ b/packages/async-iter-hierarchy/package.json
@@ -22,7 +22,8 @@
         "@esfx/internal-assert": "^1.0.0-pre.16",
         "@esfx/internal-guards": "^1.0.0-pre.16",
         "@esfx/iter-hierarchy": "^1.0.0-pre.16",
-        "@esfx/iter-ordered": "^1.0.0-pre.16"
+        "@esfx/iter-ordered": "^1.0.0-pre.16",
+        "tslib": "^2.1.0"
     },
     "publishConfig": {
         "access": "public"
