--- a/packages/collection-core-dom-shim/package.json
+++ b/packages/collection-core-dom-shim/package.json
@@ -15,8 +15,7 @@
     },
     "dependencies": {
         "@esfx/collection-core": "^1.0.0-pre.16",
-        "@esfx/type-model": "^1.0.0-pre.16",
-        "tslib": "^1.9.3"
+        "@esfx/type-model": "^1.0.0-pre.16"
     },
     "publishConfig": {
         "access": "public"
