--- a/packages/interval/package.json
+++ b/packages/interval/package.json
@@ -17,7 +17,8 @@
     "dependencies": {
         "@esfx/equatable": "^1.0.0-pre.16",
         "@esfx/internal-assert": "^1.0.0-pre.16",
-        "@esfx/internal-guards": "^1.0.0-pre.16"
+        "@esfx/internal-guards": "^1.0.0-pre.16",
+        "tslib": "^2.1.0"
     },
     "publishConfig": {
         "access": "public"
