--- a/packages/threading-conditionvariable/package.json
+++ b/packages/threading-conditionvariable/package.json
@@ -15,8 +15,7 @@
     },
     "dependencies": {
         "@esfx/disposable": "^1.0.0-pre.16",
-        "@esfx/threading-lockable": "^1.0.0-pre.16",
-        "tslib": "^1.9.3"
+        "@esfx/threading-lockable": "^1.0.0-pre.16"
     },
     "devDependencies": {
         "@esfx/internal-ts-worker": "^1.0.0-pre.16",
