--- a/internal/assert/package.json
+++ b/internal/assert/package.json
@@ -14,7 +14,8 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "dependencies": {
-        "@esfx/internal-guards": "^1.0.0-pre.16"
+        "@esfx/internal-guards": "^1.0.0-pre.16",
+        "tslib": "^2.1.0"
     },
     "publishConfig": {
         "access": "public"
