--- a/internal/guards/package.json
+++ b/internal/guards/package.json
@@ -18,7 +18,6 @@
     },
     "gitHead": "404382c3b617933f0d087fd7d64481860c46f60b",
     "dependencies": {
-        "@esfx/type-model": "^1.0.0-pre.16",
-        "tslib": "^1.9.3"
+        "@esfx/type-model": "^1.0.0-pre.16"
     }
 }
