--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
     "@microsoft/tsdoc": "0.12.19",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
+    "@types/graceful-fs": "^4.1.4",
     "chalk": "^2.4.2",
     "del": "^3.0.0",
     "fancy-log": "^1.3.3",
-    "gulp": "^4.0.0",
-    "jest": "^24.9.0",
+    "gulp": "^4.0.2",
+    "jest": "^26.6.3",
     "js-yaml": "^3.13.1",
-    "lerna": "^3.14.1",
-    "prompts": "^2.3.0",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^4.0.1-rc",
-    "yargs": "^13.2.2",
-    "yargs-unparser": "^1.5.0"
+    "lerna": "^3.22.1",
+    "prompts": "^2.4.0",
+    "ts-jest": "^26.5.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
+    "yargs": "^16.2.0",
+    "yargs-unparser": "^2.0.0"
   },
   "dependencies": {}
 }
