--- a/packages/async-iter-ordered-fromsync/package.json
+++ b/packages/async-iter-ordered-fromsync/package.json
@@ -19,7 +19,8 @@
         "@esfx/equatable": "^1.0.0-pre.16",
         "@esfx/internal-assert": "^1.0.0-pre.16",
         "@esfx/internal-guards": "^1.0.0-pre.16",
-        "@esfx/iter-ordered": "^1.0.0-pre.16"
+        "@esfx/iter-ordered": "^1.0.0-pre.16",
+        "tslib": "^2.1.0"
     },
     "publishConfig": {
         "access": "public"
