--- a/packages/async-iter-query/package.json
+++ b/packages/async-iter-query/package.json
@@ -42,7 +42,8 @@
         "@esfx/iter-lookup": "^1.0.0-pre.16",
         "@esfx/iter-ordered": "^1.0.0-pre.16",
         "@esfx/iter-page": "^1.0.0-pre.16",
-        "@esfx/iter-query": "^1.0.0-pre.16"
+        "@esfx/iter-query": "^1.0.0-pre.16",
+        "tslib": "^2.1.0"
     },
     "devDependencies": {
         "@esfx/internal-jest-sequence": "^1.0.0-pre.16"
