--- a/packages/cancelable-dom/package.json
+++ b/packages/cancelable-dom/package.json
@@ -14,8 +14,7 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "dependencies": {
-        "@esfx/cancelable": "^1.0.0-pre.16",
-        "tslib": "^1.9.3"
+        "@esfx/cancelable": "^1.0.0-pre.16"
     },
     "publishConfig": {
         "access": "public"
