--- a/packages/collections-linkedlist/package.json
+++ b/packages/collections-linkedlist/package.json
@@ -16,8 +16,7 @@
     "dependencies": {
         "@esfx/collection-core": "^1.0.0-pre.16",
         "@esfx/equatable": "^1.0.0-pre.16",
-        "@esfx/internal-guards": "^1.0.0-pre.16",
-        "tslib": "^1.9.3"
+        "@esfx/internal-guards": "^1.0.0-pre.16"
     },
     "publishConfig": {
         "access": "public"
