--- a/packages/collections-multimap/package.json
+++ b/packages/collections-multimap/package.json
@@ -18,8 +18,7 @@
         "@esfx/collections-hashmap": "^1.0.0-pre.16",
         "@esfx/collections-hashset": "^1.0.0-pre.16",
         "@esfx/equatable": "^1.0.0-pre.16",
-        "@esfx/internal-guards": "^1.0.0-pre.16",
-        "tslib": "^1.9.3"
+        "@esfx/internal-guards": "^1.0.0-pre.16"
     },
     "publishConfig": {
         "access": "public"
