--- a/packages/collections-sortedset/package.json
+++ b/packages/collections-sortedset/package.json
@@ -17,8 +17,7 @@
         "@esfx/collection-core": "^1.0.0-pre.16",
         "@esfx/equatable": "^1.0.0-pre.16",
         "@esfx/internal-binarysearch": "^1.0.0-pre.16",
-        "@esfx/internal-guards": "^1.0.0-pre.16",
-        "tslib": "^1.9.3"
+        "@esfx/internal-guards": "^1.0.0-pre.16"
     },
     "publishConfig": {
         "access": "public"
