--- a/packages/disposable/package.json
+++ b/packages/disposable/package.json
@@ -20,7 +20,6 @@
     "dependencies": {
         "@esfx/internal-deprecate": "^1.0.0-pre.16",
         "@esfx/internal-guards": "^1.0.0-pre.16",
-        "@esfx/internal-tag": "^1.0.0-pre.6",
-        "tslib": "^1.9.3"
+        "@esfx/internal-tag": "^1.0.0-pre.6"
     }
 }
