--- a/packages/iter-fn/package.json
+++ b/packages/iter-fn/package.json
@@ -35,7 +35,8 @@
         "@esfx/iter-hierarchy": "^1.0.0-pre.16",
         "@esfx/iter-lookup": "^1.0.0-pre.16",
         "@esfx/iter-ordered": "^1.0.0-pre.16",
-        "@esfx/iter-page": "^1.0.0-pre.16"
+        "@esfx/iter-page": "^1.0.0-pre.16",
+        "tslib": "^2.1.0"
     },
     "devDependencies": {
         "@esfx/internal-jest-sequence": "^1.0.0-pre.16"
