--- a/packages/iter-query/package.json
+++ b/packages/iter-query/package.json
@@ -39,7 +39,8 @@
         "@esfx/iter-hierarchy": "^1.0.0-pre.16",
         "@esfx/iter-lookup": "^1.0.0-pre.16",
         "@esfx/iter-ordered": "^1.0.0-pre.16",
-        "@esfx/iter-page": "^1.0.0-pre.16"
+        "@esfx/iter-page": "^1.0.0-pre.16",
+        "tslib": "^2.1.0"
     },
     "publishConfig": {
         "access": "public"
