--- a/packages/metadata/package.json
+++ b/packages/metadata/package.json
@@ -15,8 +15,7 @@
     },
     "dependencies": {
         "@esfx/decorators-stage1-core": "^1.0.0-pre.16",
-        "@esfx/internal-guards": "^1.0.0-pre.16",
-        "tslib": "^1.9.3"
+        "@esfx/internal-guards": "^1.0.0-pre.16"
     },
     "publishConfig": {
         "access": "public"
