Change postinstall to prepare

--- a/packages/async-iter-fn/package.json
+++ b/packages/async-iter-fn/package.json
@@ -10,7 +10,7 @@
         "./": "./dist/"
     },
     "scripts": {
-        "postinstall": "generate-export-map"
+        "prepare": "generate-export-map"
     },
     "author": "Ron Buckton (rbuckton@chronicles.org)",
     "license": "Apache-2.0",
